文章：Element ui 文件默认列表闪动

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -226,4 +226,5 @@ footer {
 }
 .list-group .list-group-item .row-action-primary img, .list-group .list-group-item .row-picture img{
     background-color: unset;
+    object-fit: contain;
 }
